--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "serve": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
   },
   "engines": {
     "node": "16.11.0",
