--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/file-saver": "^2.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.3",
     "enhanced-resolve": "^5.8.3",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
