--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,15 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
@@ -109,5 +118,8 @@
       "style": "scss"
     }
   },
-  "defaultProject": "fis-scraper-frontend"
+  "defaultProject": "fis-scraper-frontend",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
