--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,9 @@
   },
   "defaultProject": "fis-scraper-frontend",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
+    "analytics": false
   }
 }
