--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
+    "@angular/animations": "^14.2.10",
     "@angular/cdk": "^13.1.1",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
+    "@angular/common": "^14.2.10",
+    "@angular/compiler": "^14.2.10",
+    "@angular/core": "^14.2.10",
+    "@angular/forms": "^14.2.10",
     "@angular/material": "^13.1.1",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
+    "@angular/platform-browser": "^14.2.10",
+    "@angular/platform-browser-dynamic": "^14.2.10",
+    "@angular/router": "^14.2.10",
     "@ngrx/store": "^13.0.2",
     "express": "^4.17.2",
     "file-saver": "^2.0.5",
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "typescript": "~4.5.2",
+    "typescript": "~4.8.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -43,8 +43,8 @@
     "@angular-eslint/eslint-plugin-template": "13.5.0",
     "@angular-eslint/schematics": "13.5.0",
     "@angular-eslint/template-parser": "13.5.0",
-    "@angular/cli": "^13.1.2",
-    "@angular/compiler-cli": "~13.1.0",
+    "@angular/cli": "^14.2.9",
+    "@angular/compiler-cli": "^14.2.10",
     "@types/file-saver": "^2.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -64,7 +64,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "^2.7.1",
-    "prettier-eslint": "^15.0.1",
-    "typescript": "~4.5.2"
+    "prettier-eslint": "^15.0.1"
   }
 }
