--- a/package.json
+++ b/package.json
@@ -18,20 +18,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.10",
-    "@angular/cdk": "^13.1.1",
-    "@angular/common": "^14.2.10",
-    "@angular/compiler": "^14.2.10",
-    "@angular/core": "^14.2.10",
-    "@angular/forms": "^14.2.10",
-    "@angular/material": "^13.1.1",
-    "@angular/platform-browser": "^14.2.10",
-    "@angular/platform-browser-dynamic": "^14.2.10",
-    "@angular/router": "^14.2.10",
-    "@ngrx/store": "^13.0.2",
-    "@nrwl/angular": "^15.1.1",
+    "@angular/animations": "15.0.0",
+    "@angular/cdk": "15.0.0",
+    "@angular/common": "15.0.0",
+    "@angular/compiler": "15.0.0",
+    "@angular/core": "15.0.0",
+    "@angular/forms": "15.0.0",
+    "@angular/material": "15.0.0",
+    "@angular/platform-browser": "15.0.0",
+    "@angular/platform-browser-dynamic": "15.0.0",
+    "@angular/router": "15.0.0",
+    "@ngrx/store": "^14.3.2",
+    "@nrwl/angular": "15.2.1",
     "express": "^4.17.2",
-    "file-saver": "^2.0.5",
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -39,15 +38,15 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.9",
+    "@angular-devkit/build-angular": "15.0.0",
     "@angular-eslint/eslint-plugin": "13.5.0",
     "@angular-eslint/eslint-plugin-template": "13.5.0",
     "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "^14.2.9",
-    "@angular/compiler-cli": "^14.2.10",
-    "@nrwl/eslint-plugin-nx": "15.1.1",
-    "@nrwl/linter": "15.1.1",
-    "@nrwl/workspace": "15.1.1",
+    "@angular/compiler-cli": "15.0.0",
+    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/linter": "15.2.1",
+    "@nrwl/workspace": "15.2.1",
     "@types/file-saver": "^2.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -66,8 +65,9 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "nx": "15.1.1",
+    "nx": "15.2.1",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1"
   }
 }
+
