--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,13 @@
     "target": "es2020",
     "module": "es2020",
     "lib": ["es2020", "dom"],
-    "paths": {},
+    "paths": {
+      "@src/*": ["apps/fis-scraper-frontend/src/*"],
+      "@archive/*": ["apps/fis-scraper-frontend/src/app/archive/*"],
+      "@notifications/*": ["apps/fis-scraper-frontend/src/app/notifications/*"],
+      "@scraper/*": ["apps/fis-scraper-frontend/src/app/scraper/*"],
+      "@shared/*": ["apps/fis-scraper-frontend/src/app/shared/*"]
+    },
     "rootDir": "."
   },
   "angularCompilerOptions": {
