--- a/package.json
+++ b/package.json
@@ -34,25 +34,25 @@
     "@angular/platform-browser": "15.0.0",
     "@angular/platform-browser-dynamic": "15.0.0",
     "@angular/router": "15.0.0",
-    "@ngrx/store": "^14.3.2",
-    "@nrwl/angular": "15.2.1",
+    "@ngrx/store": "^15.0.0",
+    "@nrwl/angular": "^15.2.4",
     "express": "^4.17.2",
     "path": "^0.12.7",
-    "rxjs": "~7.4.0",
+    "rxjs": "~7.6.0",
     "tslib": "^2.3.0",
     "typescript": "~4.8.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.0.0",
-    "@angular-eslint/eslint-plugin": "13.5.0",
-    "@angular-eslint/eslint-plugin-template": "13.5.0",
-    "@angular-eslint/template-parser": "13.5.0",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
     "@angular/cli": "^14.2.9",
     "@angular/compiler-cli": "15.0.0",
-    "@nrwl/eslint-plugin-nx": "15.2.1",
-    "@nrwl/linter": "15.2.1",
-    "@nrwl/workspace": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.3.0",
+    "@nrwl/linter": "15.3.0",
+    "@nrwl/workspace": "15.3.0",
     "@types/file-saver": "^2.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/js-cookie": "^3.0.2",
@@ -74,7 +74,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "nx": "15.2.1",
+    "nx": "15.3.0",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1"
   }
