--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "postinstall": "node ./decorate-angular-cli.js"
   },
   "engines": {
-    "node": "16.11.1",
-    "npm": "8.12.1"
+    "node": "19.3.0",
+    "npm": "9.2.0"
   },
   "husky": {
     "hooks": {
@@ -35,6 +35,7 @@
     "@angular/platform-browser-dynamic": "15.0.0",
     "@angular/router": "15.0.0",
     "@ngrx/effects": "15.0.0",
+    "@ngrx/router-store": "^15.0.0",
     "@ngrx/store": "15.0.0",
     "@ngrx/store-devtools": "^15.0.0",
     "@nrwl/angular": "15.3.3",
