--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js",
     "serve": "nx serve",
     "build": "nx build --base-href 'https://www.fisscraper.online/'",
-    "postbuild": "copyfiles --up 3 ./dist/apps/fis-scraper-frontend/* /home/szymon/PycharmProjects/fis-scraper-api/static",
+    "postbuild": "/bin/bash /home/szymon/WebstormProjects/fis-scraper-frontend/apps/fis-scraper-frontend/copy.sh",
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
     "lint": "nx lint --quiet --fix",
@@ -18,8 +18,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run test",
-      "pre-push": "npm run lint && npm run test"
+      "pre-commit": "nx lint",
+      "pre-push": "nx lint"
     }
   },
   "private": true,
